# basic-ssg

./: .gitignore  Cargo.toml  LICENSE  README.md  build.roc  build.sh  bundle.sh  flake.nix  glue.sh  run.sh  run_tests.sh  rust-toolchain.toml  test-build-platform.sh
.github/workflows/: generate-docs.yaml  tests.yaml
ci/: all_tests.sh
crates/host/: Cargo.toml
crates/host/src/: lib.rs
crates/roc_app/src/: aarch64.rs  wasm32.rs
crates/roc_host/: Cargo.toml
crates/roc_host/src/: lib.rs
crates/roc_host_lib/: Cargo.toml
crates/roc_host_lib/src/: lib.rs
crates/ssg/: Cargo.toml
crates/ssg/src/: lib.rs
example/: .gitignore  build.sh  main.roc  run.sh
example/content/: index.md
example/content/fruit/: banana.md  codeExample.roc
example/content/people/: index.md
example/output/: index.html
example/output/fruit/: apple.html  banana.html  cherry.html
example/output/people/: index.html
example/www/: style.css
examples/: main.roc  simple.roc  style.css
examples/content/: apple.md  banana.md  cherry.md
examples/content/subFolder/: apple.md  codeExample.roc
examples/output/: banana.html
generated-docs/: index.html  llms.txt
generated-docs/SSG/: index.html
generated-docs/Types/: index.html
platform/: Cmd.roc  Effect.roc  Env.roc  EnvDecoding.roc  Host.roc  Html.roc  Http.roc  InternalTypes.roc  PlatformTask.roc  PlatformTasks.roc  SSG.roc  Stderr.roc  Stdout.roc  Task.roc  Tcp.roc  Types.roc  main-glue.roc  main.roc
platform/Html/: Attributes.roc
