[workspace]
resolver = "2"
members = ["crates/ssg", "crates/roc_host", "crates/roc_host_lib"]

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1

[workspace.dependencies]
roc_std = { git = "https://github.com/roc-lang/roc.git" }
roc_host = { path = "crates/roc_host" }
syntect = { version = "5.0", default-features = false, features = [
    "default-fancy",
] }
roc_highlight = { git = "https://github.com/roc-lang/roc.git", package = "roc_highlight" }
pulldown-cmark = { version = "0.9.2", default-features = false }
libc = "0.2"
ssg = { path = "crates/ssg" }
