[workspace]
resolver = "2"
members = ["crates/ssg", "crates/roc_host", "crates/roc_host_lib"]

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1

[workspace.dependencies]
roc_std = { git = "https://github.com/roc-lang/roc.git" }
roc_host = { path = "crates/roc_host" }
# TODO restore when basic-cli changes land
# https://github.com/roc-lang/basic-cli/pull/288
#
# roc_env = { git = "https://github.com/roc-lang/basic-cli.git" }
# roc_command = { git = "https://github.com/roc-lang/basic-cli.git" }
# roc_io_error = { git = "https://github.com/roc-lang/basic-cli.git" }
# roc_stdio = { git = "https://github.com/roc-lang/basic-cli.git" }
# roc_file = { git = "https://github.com/roc-lang/basic-cli.git" }
# roc_http = { git = "https://github.com/roc-lang/basic-cli.git" }
roc_env = { path = "../basic-cli/crates/roc_env" }
roc_command = { path = "../basic-cli/crates/roc_command" }
roc_io_error = { path = "../basic-cli/crates/roc_io_error" }
roc_stdio = { path = "../basic-cli/crates/roc_stdio" }
roc_file = { path = "../basic-cli/crates/roc_file" }
roc_http = { path = "../basic-cli/crates/roc_http" }
syntect = { version = "5.0", default-features = false, features = [
    "default-fancy",
] }
roc_highlight = { git = "https://github.com/roc-lang/roc.git", package = "roc_highlight" }
pulldown-cmark = { version = "0.9.2", default-features = false }
libc = "0.2"
ssg = { path = "crates/ssg" }
