[package]
name = "ssg"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
syntect = { version = "5.0", default-features = false, features = ["default-fancy"] }
roc_highlight = { git = "https://github.com/roc-lang/roc.git", package = "roc_highlight" }
roc_std = {path = "../roc_std"}
roc_app = {path = "../roc_app"}
pulldown-cmark = { version = "0.9.2", default-features = false }